# LLMOps

./: .gitignore  README.md  Todo.md  notes.md  pyproject.toml
Scripts/: HW1.py  HW3.py  HW4.py  hw2.py  mcp_client.py
notebooks/: 01-intro.ipynb  bow_tfIdf.ipynb  text_search_class.ipynb
notebooks/Agents/: AgenticSearch.ipynb
notebooks/RAG_BASIC/: HW1.ipynb  bow_tfIdf.ipynb  retrival.ipynb  search.ipynb
notebooks/Vector_Search2/: hw2.ipynb  rag_with_vectorSearch.ipynb  semantic_search.ipynb
notebooks/notebooks_1/: 01-intro.ipynb  dataset_creation.ipynb  retrival.ipynb
