[project]
name = "llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "elasticsearch==8.17.2",
    "jupyter>=1.1.1",
    "minsearch>=0.0.2",
    "notebook>=7.4.3",
    "openai>=1.84.0",
    "pandas>=2.2.3",
    "python-docs>=0.1.0",
    "python-docx>=1.1.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
]
